src/libqcombobox.h

typedef struct QComboBox QComboBox;
typedef struct QIcon QIcon;
typedef struct QVariant QVariant;
void QComboBox_AddItem22(QComboBox* self, libqt_string text, QVariant* userData);
void QComboBox_AddItem3(QComboBox* self, QIcon* icon, libqt_string text, QVariant* userData);
void QComboBox_InsertItem3(QComboBox* self, int index, libqt_string text, QVariant* userData);
void QComboBox_InsertItem4(QComboBox* self, int index, QIcon* icon, libqt_string text, QVariant* userData);
void QComboBox_SetItemData3(QComboBox* self, int index, QVariant* value, int role);