src/libqcombobox.bf

	[LinkName("QComboBox_AddItem22")]
	public static extern void QComboBox_AddItem22(void* c_this, char8[] text, QVariant userData);
	[LinkName("QComboBox_AddItem3")]
	public static extern void QComboBox_AddItem3(void* c_this, QIcon icon, char8[] text, QVariant userData);
	[LinkName("QComboBox_InsertItem3")]
	public static extern void QComboBox_InsertItem3(void* c_this, int32 index, char8[] text, QVariant userData);
	[LinkName("QComboBox_InsertItem4")]
	public static extern void QComboBox_InsertItem4(void* c_this, int32 index, QIcon icon, char8[] text, QVariant userData);
	[LinkName("QComboBox_SetItemData3")]
	public static extern void QComboBox_SetItemData3(void* c_this, int32 index, QVariant value, int32 role);
}